fix Linux gcc compile error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,6 +168,7 @@ file(GLOB SOURCES
 
 add_executable(lightgbm src/main.cpp ${SOURCES})
 add_library(_lightgbm src/c_api.cpp src/lightgbm_R.cpp ${SOURCES})
+target_link_libraries(_lightgbm -pthread -fopenmp)
 
 if(MSVC)
     set_target_properties(_lightgbm PROPERTIES OUTPUT_NAME "lib_lightgbm")
